--- a/test1/src/main/resources/iut/gon/test1/primary.fxml
+++ b/test1/src/main/resources/iut/gon/test1/primary.fxml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.gon.test1.PrimaryController">
+<VBox alignment="CENTER" prefHeight="196.0" prefWidth="430.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.gon.test1.PrimaryController">
    <children>
+      <ToolBar prefHeight="56.0" prefWidth="416.0">
+        <items>
+            <ToggleButton mnemonicParsing="false" text="ToggleButton" />
+            <ToggleButton mnemonicParsing="false" selected="true" text="ToggleButton">
+               <toggleGroup>
+                  <ToggleGroup fx:id="groupe" />
+               </toggleGroup>
+            </ToggleButton>
+            <ToggleButton mnemonicParsing="false" text="ToggleButton" toggleGroup="$groupe" />
+            <ToggleButton mnemonicParsing="false" text="ToggleButton" toggleGroup="$groupe" />
+        </items>
+      </ToolBar>
       <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
-      <ToggleButton fx:id="primaryButton" text="ON/OFF" onAction="#switchToSecondary"/>
+      <Button fx:id="primaryButton" onAction="#switchToSecondary" text="Switch to Secondary View" />
+      <ToggleButton fx:id="primaryButton" onAction="#switchToSecondary" text="ON/OFF" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
