--- a/tp5/src/main/resources/fr/unicaen/iut/tp5/demineur.fxml
+++ b/tp5/src/main/resources/fr/unicaen/iut/tp5/demineur.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr">
    <top>
       <VBox fx:id="vBox" alignment="TOP_CENTER" prefHeight="87.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -28,13 +28,12 @@
                   </Menu>
                   <Menu fx:id="menuChoixDifficulte" mnemonicParsing="false" text="Difficulté">
                      <items>
-                        <RadioMenuItem fx:id="menuFacile" mnemonicParsing="false" text="Facile">
                            <toggleGroup>
                               <ToggleGroup fx:id="groupe" />
-                           </toggleGroup>
-                        </RadioMenuItem>
-                        <RadioMenuItem fx:id="menuMoyen" mnemonicParsing="false" text="Moyen" toggleGroup="$groupe" />
-                        <RadioMenuItem fx:id="menuDifficile" mnemonicParsing="false" text="Difficile" toggleGroup="$groupe" />
+                        		<RadioMenuItem fx:id="menuFacile" mnemonicParsing="false" text="Facile" toggleGroup="$groupe" userData="10;10;10"/>
+                        		<RadioMenuItem fx:id="menuMoyen" mnemonicParsing="false" text="Moyen" toggleGroup="$groupe" userData="20;20;50" />
+                        		<RadioMenuItem fx:id="menuDifficile" mnemonicParsing="false" text="Difficile" toggleGroup="$groupe"  userData="30;20;100"/>
+                         </toggleGroup>
                      </items>
                   </Menu>
               </menus>
@@ -44,7 +43,7 @@
                   <Label fx:id="labelInconnues" alignment="TOP_CENTER" contentDisplay="CENTER" text="Nombre d'inconnues" />
                   <TextField fx:id="textFieldInconnu" alignment="TOP_CENTER" editable="false" focusTraversable="false" />
                   <Label fx:id="labelMarque" alignment="TOP_CENTER" contentDisplay="CENTER" text="Nombre de marques" />
-                  <TextField fx:id="labelMarque" alignment="TOP_CENTER" editable="false" focusTraversable="false" />
+                  <TextField fx:id="textFielMarque" alignment="TOP_CENTER" editable="false" focusTraversable="false" />
                </children>
             </HBox>
          </children>
