--- a/tp5/src/main/resources/fr/unicaen/iut/tp5/demineur.fxml
+++ b/tp5/src/main/resources/fr/unicaen/iut/tp5/demineur.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.unicaen.iut.tp5.ControllerDemineur">
    <top>
       <VBox fx:id="vBox" alignment="TOP_CENTER" prefHeight="87.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -28,14 +27,14 @@
                   </Menu>
                   <Menu fx:id="menuChoixDifficulte" mnemonicParsing="false" text="Difficulté">
                      <items>
+                        <RadioMenuItem mnemonicParsing="false" text="Facile" userData="10;10;10">
                            <toggleGroup>
                               <ToggleGroup fx:id="groupe" />
-                        		<RadioMenuItem fx:id="menuFacile" mnemonicParsing="false" text="Facile" toggleGroup="$groupe" userData="10;10;10"/>
-                        		<RadioMenuItem fx:id="menuMoyen" mnemonicParsing="false" text="Moyen" toggleGroup="$groupe" userData="20;20;50" />
-                        		<RadioMenuItem fx:id="menuDifficile" mnemonicParsing="false" text="Difficile" toggleGroup="$groupe"  userData="30;20;100"/>
-                         </toggleGroup>
-                     </items>
-                  </Menu>
+                           </toggleGroup>
+                        </RadioMenuItem>
+                        <RadioMenuItem mnemonicParsing="false" text="Moyen" toggleGroup="$groupe" userData="20;20;50" />
+                        <RadioMenuItem mnemonicParsing="false" text="Difficile" toggleGroup="$groupe" userData="30;20;100"/>
+                     </items></Menu>
               </menus>
             </MenuBar>
             <HBox fx:id="hBox" prefHeight="52.0" prefWidth="600.0">
